[package]
name = "AppUsingTracedLibrary"
version = "0.1.0"
authors = ["Sujit Joshi <joshi.sujit020386@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
TracedLibrary = { path = "../TracedLibrary" }
tracing-subscriber = { version = "0.2.15" }

tracing-chrome = { git = "https://github.com/thoren-d/tracing-chrome", branch="develop", optional = true}

tracing-opentelemetry = { version= "0.11.0"}
# opentelemetry = "0.12.0"
opentelemetry-jaeger = {version = "0.11.0" }