[package]
name = "AppUsingTracedLibrary"
version = "0.1.0"
authors = ["Sujit Joshi <joshi.sujit020386@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
TracedLibrary = { path = "../TracedLibrary" }
tracing = { version = "0.1.24", default-features = false }
tracing-subscriber = { version = "0.2.15" }
tracing-opentelemetry = { version= "0.11.0"}
opentelemetry-jaeger = {version = "0.11.0" }